# hacienda-gpt

./: Makefile  README.md  ROADMAP_CLAUDE_CODE.md  pyproject.toml
.github/workflows/: critical-regression.yml
dashboards/: decision_observability_dashboard.json
docs/adr/: 0001-decision-assistant-architecture.md
docs/domain/: contracts.md  glossary.md  intent-taxonomy.md
docs/engineering/: dev-workflow.md
docs/operations/: observability.md  snapshot-promotion-runbook.md
docs/security/: rag-prompt-injection-hardening.md  review.md
eval_data/: intent_fact_extraction.jsonl
eval_data/critical_cases/: tramite_year_critical_cases.jsonl
hacienda_gpt/: settings.py
hacienda_gpt/api/: api.py
hacienda_gpt/cli/: benchmark_retrieval.py  check_critical_regressions.py  crawler.py  eval.py  eval_interpreter.py  eval_pipeline.py  export_audit.py  processor.py  promote_snapshot.py
hacienda_gpt/crawler/: crawlers.py
hacienda_gpt/decision/: __init__.py  audit.py  explainer.py  interpreter.py  interpreter_light.py  planner.py  question_policy.py  rules.py  rules_engine.py  schemas.py  state_store.py  state_store_sqlite.py  taxonomy.py
hacienda_gpt/llm/: chain.py  retrieval_profiles.py  security.py
hacienda_gpt/observability/: metrics.py
hacienda_gpt/processor/: document_loader.py
ops/: promotion_config.json
rules/: irpf_candidate_rules.json
scripts/: run_real_smoke_tests.sh  run_snapshot_pipeline.sh
tests/: conftest.py  test_adr_0001.py  test_api_contract.py  test_chain_retriever.py  test_chain_retriever_profiles.py  test_dev_workflow_docs.py  test_document_loader_metadata.py  test_domain_docs.py  test_intent_taxonomy_docs.py  test_observability_metrics.py  test_rag_security.py  test_retrieval_profiles.py  test_settings.py  test_smoke_pipeline.py  test_snapshot_promotion.py  test_ui_api_mode.py  test_ui_history.py
(+20 files in other folders)
