[tool.poetry]
name = "hacienda_gpt"
version = "0.1.0"
description = ""
authors = ["Aldo Borrero <82811+aldoborrero@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hacienda_gpt" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "2.34.2"
openai = "2.37.0"
streamlit = "1.57.0"
langchain = "1.3.1"
langchain-community = "0.4.1"
langchain-openai = "1.2.1"
langchain-text-splitters = "1.1.2"
tiktoken = "0.13.0"
faiss-cpu = "1.13.2"
pypdf = "6.11.0"
cryptography = "48.0.0"
python-dotenv = "1.2.2"
huggingface-hub = "1.15.0"
streamlit-extras = "1.6.0"
tqdm = "4.67.3"
unstructured = {version = "0.22.29", extras = ["all-docs"]}
pdfminer-six = "20260107"
click = "8.4.0"
scrapy = "2.15.2"
scrapy-fake-useragent = "1.4.4"
pathvalidate = "3.3.1"
scrapy-playwright = "0.0.46"
gpt4all = "2.8.2"
ptpython = "3.0.32"
fastapi = "0.118.0"
uvicorn = "0.37.0"
pydantic = "2.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
pytest-mock = "3.15.1"
pytest-asyncio = "1.3.0"
black = "25.9.0"
ruff = "0.13.1"
mypy = "1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
no-lines-before = ["local-folder"]
known-first-party = ["hacienda_gpt"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["^tests/"]
